# qre-privacy-toolkit

./: .gitignore  AUTO_UPDATE_README.md  LICENSE  README.md  index.html  jest.config.ts  myapp.key.pub  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  fuzz.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  cargo-deny.txt  deny.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml  rust-toolchain.toml
src-tauri/fuzz/fuzz_targets/: fuzz_decrypt.rs
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  bookmarks.rs  breach.rs  cleaner.rs  clipboard_store.rs  commands.rs  crypto.rs  crypto_stream.rs  email.rs  entropy.rs  hasher.rs  keychain.rs  lib.rs  main.rs  notes.rs  passwords.rs  qr.rs  registry_cleaner.rs  secure_rng.rs  shredder.rs  state.rs  system_cleaner.rs  tests.rs  timelock.rs  timelock_clock.rs  utils.rs  vault.rs  wordlist.rs
src-tauri/src/commands/: files.rs  mod.rs  portable.rs  timelock.rs  tools.rs  vault.rs
src/assets/: HELP.md  helpContent.ts
src/components/auth/: AuthOverlay.tsx
src/hooks/: useAuth.ts  useBookmarks.ts  useClipboard.ts  useCrypto.ts  useFileSystem.ts  useNotes.ts  usePortableVault.ts  useTheme.ts  useVault.ts
src/styles/: components.css  dashboard.css  modern-cards.css
src/utils/: CleanerView.test.tsx  ShredderView.test.tsx  SystemCleanerView.test.tsx  formatting.ts  notesUtils.test.ts  notesUtils.ts  security.test.ts  security.ts
(+36 files in other folders)
