[package]
name = "qre-gui"
version = "2.1.0"
description = "A Tauri App"
authors = ["Pashalis Laoutaris"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zstd = "0.13"
thiserror = "1.0"

# Crypto
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3.5"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
anyhow = "1.0"
chrono = "0.4"
# ADD features = ["derive"] here:
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3       # Max optimization
lto = "fat"         # Link Time Optimization (cross-module analysis)
codegen-units = 1   # Compile slower, but produce faster code
panic = "abort"     # Remove stack unwinding (smaller/faster binary)
strip = true        # Remove symbols
